--- a/style.css
+++ b/style.css
@@ -70,9 +70,16 @@ h1{
 	height: 24px;
 	width: 24px;
 	border-radius: 1em;
-	border: 2px solid #600b0b;
 	color: #600b0b;
 	float: right;
-	margin-top: -5px;
 	margin-right: -48px;
+}
+
+.btn-check{
+	height: 24px;
+	width: 24px;
+	border-radius: 1em;
+	color: #ff6355;
+	float: left;
+	margin-left: -48px;
 }
