--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ h1{
 	border-radius: 1em;
 	color: #600b0b;
 	float: right;
+	margin-top: 1px;
 	margin-right: -48px;
 }
 
@@ -81,5 +82,6 @@ h1{
 	border-radius: 1em;
 	color: #ff6355;
 	float: left;
-	margin-left: -48px;
+	margin-top: 1px;
+	margin-left: -36px;
 }
