animated list and added full list clear

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	text-align: center;
-	font-family: sans-serif;
+	font-family: 'Roboto Slab', sans-serif;
 	background-color: #ff6355;
 	color: #ff6355;
 	/*color: #51434a;*/
@@ -13,6 +13,8 @@ body{
 h1{
 	text-shadow: 0px 1px rgba(255,255,255, 0);
 	margin-bottom: 0.2em;
+	font-weight: 400;
+	letter-spacing: 0.1em;
 }
 
 .banner{
@@ -55,8 +57,11 @@ h1{
 
 .listitem{
 	font-size: 1em;
-	padding: 5px 3em;
+	font-weight: 300;
+	line-height: 1;
+	padding: 2px 3em;
 	margin: 3px;
+	margin-top: -1em;
 	background-color: white;
 	border-radius: 1em;
 	text-align: left;
@@ -84,4 +89,13 @@ h1{
 	float: left;
 	margin-top: 1px;
 	margin-left: -36px;
+}
+
+.clear{
+	background-color: #600b0b;
+	position: relative;
+	padding: 5px 2em;
+	margin: 0 auto;
+	font-weight: 400;
+	letter-spacing: 0.1em;
 }
